power: Avoid warning with no keyboard backlight

If there's no keyboard backlight interface in gnome-settings-daemon,
hide the slider as well, rather than throw a warning.

https://bugzilla.gnome.org/show_bug.cgi?id=706040